<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:orientation="vertical"
        tools:context=".GatherActivity">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verfuegbare_provider" />

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_provider" />

    <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/lokalisierung_gestartet"
            android:textOff="@string/lokalisierung_starten"
            android:onClick="onToggleButtonLokalisierenClick"
            android:id="@+id/togglebutton_lokalisierung"/>
    
    <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="#000"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aktuelles_projekt_prefix"
            android:id="@+id/textview_aktuelles_projekt"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thema"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_thema" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notiz"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_notiz" />
    
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notiz_speichern"
            android:onClick="onButtonNotizSpeichernClick"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/standort_anzeigen"
            android:onClick="onButtonStandortAnzeigenClick"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/geodaten_empfangen" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/textview_output" />

</LinearLayout>